fix cat eyes z-index

--- a/components/hero/cat.css
+++ b/components/hero/cat.css
@@ -163,7 +163,7 @@
   position: absolute;
   top: 1.5rem;
   left: -1.2rem;
-  z-index: 100;
+  z-index: 10;
   justify-content: center;
   gap: 0.1rem;
   transition: 0.3s;
